env.sample file is created and changes under .env file is done

--- a/.env
+++ b/.env
@@ -1,1 +1,5 @@
-REACT_APP_APPWRITE_URL=" test environment"
+VITE_APP_APPWRITE_URL="https://cloud.appwrite.io/v1"
+VITE_APPWRITE_PROJECT_ID="657daf2fc49c0d9e3e0f"
+VITE_APPWRITEA_DATABASE_ID="657db07093623a4fcf46"
+VITE_APPWRITE_COLLECTION_ID="657db0ac4c9bb5ef77aa"
+VITE_APPWRITE_BUCKET_ID="657db2b93d22df9e93ee"
